# RMV-03

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  task  test_data.txt
include/: windmill.hpp
src/: windmill.cpp
